// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly renders with Multiple Charges demo data and CasesList view selected 1`] = `
<DocumentFragment>
  <div
    class="bg-white shadow br3 mb3 ph3 pb3"
  >
    <div
      class="flex flex-wrap justify-end mb1"
    >
      <div
        class="flex flex-wrap items-center mv1 mr-auto"
      >
        <h2
          class="f5 fw7 mr3"
        >
          Search Summary
        </h2>
        <fieldset
          aria-label="Summary overview sort options"
          class="flex flex-wrap radio radio-sm ml1"
          dir="ltr"
          role="radiogroup"
        >
          <p>
            <input
              aria-checked="false"
              checked=""
              id="summary-overview-sort-options-charges"
              name="summary overview sort options"
              type="radio"
              value="Charges"
            />
            <label
              for="summary-overview-sort-options-charges"
            >
              Charges
            </label>
          </p>
          <p>
            <input
              aria-checked="true"
              id="summary-overview-sort-options-cases"
              name="summary overview sort options"
              type="radio"
              value="Cases"
            />
            <label
              for="summary-overview-sort-options-cases"
            >
              Cases
            </label>
          </p>
        </fieldset>
      </div>
      <button
        class="ma2 nowrap mid-gray link hover-blue fw6 br3 pv1 ph2"
      >
        <i
          aria-hidden="true"
          class="fas fa-bolt pr2"
        />
        Generate Paperwork
      </button>
      <button
        class="ma2 nowrap mid-gray link hover-blue fw6 br3 pv1 ph2"
      >
        <i
          aria-hidden="true"
          class="fas fa-download pr2"
        />
        Summary PDF
      </button>
    </div>
    <div
      class="flex-ns flex-wrap"
    >
      <div
        class="w-100 w-two-thirds-l"
      >
        <h3
          class="bt b--light-gray pt2 mb3"
        >
          <span
            class="fw7"
          >
            Cases
          </span>
           (3)
        </h3>
        <div
          class="bt b--light-gray pt2 mb3"
        >
          <div
            class="mb3 pb1 bb b--light-gray"
          >
            <div
              class="fw6 lh-copy"
            >
              <div
                class="flex-ns flex-wrap"
              >
                <div
                  class="w-30"
                >
                  Jan 21, 2022
                </div>
                <div
                  class="w-70"
                >
                  #
                  <a
                    class="link bb hover-blue"
                    href="#110000"
                  >
                    110000
                  </a>
                </div>
              </div>
            </div>
            <ul
              class="list"
            >
              <li
                class="f6 pv1 flex-ns flex-wrap"
              >
                <div
                  class="w-30 pr4"
                >
                  <span
                    class="fw6 green bg-washed-green pv1 ph2 dib br3 relative outline-2-white z-1"
                  >
                    Eligible Now
                  </span>
                </div>
                <div
                  class="w-70"
                >
                  <span
                    class="lh-copy"
                  >
                    Theft in the Third Degree
                  </span>
                   
                  <span
                    class="lh-copy"
                  >
                    (DISMISSED)
                  </span>
                   
                </div>
              </li>
            </ul>
          </div>
          <div
            class="mb3 pb1 bb b--light-gray"
          >
            <div
              class="fw6 lh-copy"
            >
              <div
                class="flex-ns flex-wrap"
              >
                <div
                  class="w-30"
                >
                  Jan 21, 2019
                </div>
                <div
                  class="w-70"
                >
                  #
                  <a
                    class="link bb hover-blue"
                    href="#100000"
                  >
                    100000
                  </a>
                </div>
              </div>
            </div>
            <ul
              class="list"
            >
              <li
                class="f6 pv1 flex-ns flex-wrap"
              >
                <div
                  class="w-30 pr4"
                >
                  <span
                    class="fw6 dark-blue bg-washed-blue pv1 ph2 dib br3 relative outline-2-white z-1"
                  >
                    Eligible Now If Balance Paid
                  </span>
                </div>
                <div
                  class="w-70"
                >
                  <span
                    class="lh-copy"
                  >
                    Disorderly Conduct in the First Degree
                  </span>
                   
                  <span
                    class="lh-copy"
                  >
                    (CONVICTED)
                  </span>
                   
                </div>
              </li>
              <li
                class="f6 pv1 flex-ns flex-wrap"
              >
                <div
                  class="w-30 pr4"
                >
                  <span
                    class="fw6 dark-blue bg-washed-blue pv1 ph2 dib br3 relative outline-2-white z-1"
                  >
                    Eligible Now If Balance Paid
                  </span>
                </div>
                <div
                  class="w-70"
                >
                  <span
                    class="lh-copy"
                  >
                    Disorderly Conduct in the Second Degree
                  </span>
                   
                  <span
                    class="lh-copy"
                  >
                    (DISMISSED)
                  </span>
                   
                </div>
              </li>
            </ul>
            <div
              class="flex-ns flex-wrap pv2 fw6"
            >
              <div
                class="w-30"
              />
              <div
                class="w-70"
              >
                Balance: $1,000.00
              </div>
            </div>
          </div>
          <div
            class="mb3 pb1 bb b--light-gray"
          >
            <div
              class="fw6 lh-copy"
            >
              <div
                class="flex-ns flex-wrap"
              >
                <div
                  class="w-30"
                >
                  Jan 21, 2011
                </div>
                <div
                  class="w-70"
                >
                  #
                  <a
                    class="link bb hover-blue"
                    href="#120000"
                  >
                    120000
                  </a>
                </div>
              </div>
            </div>
            <ul
              class="list"
            >
              <li
                class="f6 pv1 flex-ns flex-wrap"
              >
                <div
                  class="w-30 pr4"
                >
                  <span
                    class="fw6 purple bg-washed-purple pv1 ph2 dib br3 relative outline-2-white z-1"
                  >
                    Needs More Analysis
                  </span>
                </div>
                <div
                  class="w-70"
                >
                  <span
                    class="lh-copy"
                  >
                    Failure to Obey Traffic Control Device
                  </span>
                   
                  <span
                    class="lh-copy"
                  >
                    (DISMISSED)
                  </span>
                   
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="w-100 w-33-l ph3-l mb3"
      >
        <div
          class="mb4"
        >
          <h3
            class="fw7 bt b--light-gray pt2 mb3"
          >
            Balance due by county 
            <a
              class=" gray link hover-blue underline"
              href="/manual#paybalances"
            >
              <i
                aria-hidden="true"
                class="fas fa-question-circle link hover-dark-blue"
              />
              <span
                class="visually-hidden"
              >
                Learn more about balances
              </span>
            </a>
          </h3>
          <ul
            class="mw5 list"
          >
            <div>
              <h4
                class="fw6 mb2"
              >
                Baker
              </h4>
              <ul
                class="mw5 list mb3"
              >
                <li
                  class="mb2"
                >
                  <a
                    class="link hover-blue"
                    href="/#100000"
                  >
                    100000
                  </a>
                   
                  <span
                    class="fr"
                  >
                    $1,000.00
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="mw5 bt b--light-gray pt2"
            >
              <span
                class="fw6"
              >
                Total
              </span>
              <span
                class="fr"
              >
                $1,000.00
              </span>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`correctly renders with the John Common demo data 1`] = `
<div
  className="bg-white shadow br3 mb3 ph3 pb3"
>
  <div
    className="flex flex-wrap justify-end mb1"
  >
    <div
      className="flex flex-wrap items-center mv1 mr-auto"
    >
      <h2
        className="f5 fw7 mr3"
      >
        Search Summary
      </h2>
      <fieldset
        aria-label="Summary overview sort options"
        className="flex flex-wrap radio radio-sm ml1"
        dir="ltr"
        role="radiogroup"
      >
        <p>
          <input
            aria-checked={true}
            checked={true}
            id="summary-overview-sort-options-charges"
            name="summary overview sort options"
            onChange={[Function]}
            type="radio"
            value="Charges"
          />
          <label
            htmlFor="summary-overview-sort-options-charges"
          >
            Charges
          </label>
        </p>
        <p>
          <input
            aria-checked={false}
            checked={false}
            id="summary-overview-sort-options-cases"
            name="summary overview sort options"
            onChange={[Function]}
            type="radio"
            value="Cases"
          />
          <label
            htmlFor="summary-overview-sort-options-cases"
          >
            Cases
          </label>
        </p>
      </fieldset>
    </div>
    <button
      className="ma2 nowrap mid-gray link hover-blue fw6 br3 pv1 ph2"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="fas fa-bolt pr2"
      />
      Generate Paperwork
    </button>
    <button
      className="ma2 nowrap mid-gray link hover-blue fw6 br3 pv1 ph2"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="fas fa-download pr2"
      />
      Summary PDF
    </button>
  </div>
  <div
    className="flex-ns flex-wrap"
  >
    <div
      className="w-100 w-two-thirds-l"
    >
      <h3
        className="bt b--light-gray pt2 mb3"
      >
        <span
          className="fw7"
        >
          Cases
        </span>
         (
        5
        )
      </h3>
      <h3
        className="bt b--light-gray pt2 mb3"
      >
        <span
          className="fw7"
        >
          Charges
        </span>
         (
        5
        )
        <p
          className="f6 fw5 pt1"
        >
          Excludes traffic violations
        </p>
      </h3>
      <div
        className="mb3"
      >
        <div
          className="dark-blue bb b--light-gray lh-copy pb1"
        >
          <span
            className="fw7 mb2"
          >
            Eligible Nov 28, 2025
          </span>
           
          (1)
        </div>
        <ul
          className="list"
        >
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="link hover-blue"
              href="#100000-1"
            >
              Aggravated Theft in the First Degree (CONVICTED) Charged Jul 16, 2016
            </a>
          </li>
        </ul>
      </div>
      <div
        className="mb3"
      >
        <div
          className="green bb b--light-gray lh-copy pb1"
        >
          <span
            className="fw7 mb2"
          >
            Eligible Now
          </span>
           
          (3)
        </div>
        <ul
          className="list"
        >
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="link hover-blue"
              href="#200000-1"
            >
              Obstruction of search warrant (DISMISSED) Charged Jul 16, 2019
            </a>
          </li>
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="link hover-blue"
              href="#110000-1"
            >
              Theft in the Second Degree (CONVICTED) Charged Apr 2, 2015
            </a>
          </li>
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="link hover-blue"
              href="#120000-1"
            >
              Poss under oz Marijuana (CONVICTED) Charged Apr 2, 2014
            </a>
          </li>
        </ul>
      </div>
      <div
        className="mb3"
      >
        <div
          className="purple bb b--light-gray lh-copy pb1"
        >
          <span
            className="fw7 mb2"
          >
            Needs More Analysis
          </span>
           
          (1)
          <p
            className="f6 fw5"
          >
            These charges need clarification below before an accurate analysis can be determined
          </p>
        </div>
        <ul
          className="list"
        >
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="link hover-blue"
              href="#210000-1"
            >
              Poss Controlled Sub (CONVICTED) Charged Sep 23, 2018
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="w-100 w-33-l ph3-l mb3"
    >
      <div
        className="mb4"
      >
        <h3
          className="fw7 bt b--light-gray pt2 mb3"
        >
          Balance due by county
           
          <a
            className=" gray link hover-blue underline"
            href="/manual#paybalances"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fas fa-question-circle link hover-dark-blue"
            />
            <span
              className="visually-hidden"
            >
              Learn more about balances
            </span>
          </a>
        </h3>
        <ul
          className="mw5 list"
        >
          None
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`correctly renders with the Multiple Charges demo data 1`] = `
<div
  className="bg-white shadow br3 mb3 ph3 pb3"
>
  <div
    className="flex flex-wrap justify-end mb1"
  >
    <div
      className="flex flex-wrap items-center mv1 mr-auto"
    >
      <h2
        className="f5 fw7 mr3"
      >
        Search Summary
      </h2>
      <fieldset
        aria-label="Summary overview sort options"
        className="flex flex-wrap radio radio-sm ml1"
        dir="ltr"
        role="radiogroup"
      >
        <p>
          <input
            aria-checked={true}
            checked={true}
            id="summary-overview-sort-options-charges"
            name="summary overview sort options"
            onChange={[Function]}
            type="radio"
            value="Charges"
          />
          <label
            htmlFor="summary-overview-sort-options-charges"
          >
            Charges
          </label>
        </p>
        <p>
          <input
            aria-checked={false}
            checked={false}
            id="summary-overview-sort-options-cases"
            name="summary overview sort options"
            onChange={[Function]}
            type="radio"
            value="Cases"
          />
          <label
            htmlFor="summary-overview-sort-options-cases"
          >
            Cases
          </label>
        </p>
      </fieldset>
    </div>
    <button
      className="ma2 nowrap mid-gray link hover-blue fw6 br3 pv1 ph2"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="fas fa-bolt pr2"
      />
      Generate Paperwork
    </button>
    <button
      className="ma2 nowrap mid-gray link hover-blue fw6 br3 pv1 ph2"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="fas fa-download pr2"
      />
      Summary PDF
    </button>
  </div>
  <div
    className="flex-ns flex-wrap"
  >
    <div
      className="w-100 w-two-thirds-l"
    >
      <h3
        className="bt b--light-gray pt2 mb3"
      >
        <span
          className="fw7"
        >
          Cases
        </span>
         (
        3
        )
      </h3>
      <h3
        className="bt b--light-gray pt2 mb3"
      >
        <span
          className="fw7"
        >
          Charges
        </span>
         (
        4
        )
        <p
          className="f6 fw5 pt1"
        >
          Excludes traffic violations
        </p>
      </h3>
      <div
        className="mb3"
      >
        <div
          className="green bb b--light-gray lh-copy pb1"
        >
          <span
            className="fw7 mb2"
          >
            Eligible Now
          </span>
           
          (1)
        </div>
        <ul
          className="list"
        >
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="link hover-blue"
              href="#110000-1"
            >
              Theft in the Third Degree (DISMISSED) Charged Jan 21, 2022
            </a>
          </li>
        </ul>
      </div>
      <div
        className="mb3"
      >
        <div
          className="dark-blue bb b--light-gray lh-copy pb1"
        >
          <span
            className="fw7 mb2"
          >
            Eligible Now If Balance Paid
          </span>
           
          (2)
        </div>
        <ul
          className="list"
        >
          <li
            className="fw7 pt2"
          >
            Baker 100000 – $1000.0
          </li>
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="ml2"
              href="#100000-1"
            >
              Disorderly Conduct in the First Degree (CONVICTED) Charged Jan 21, 2019
            </a>
          </li>
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="ml2"
              href="#100000-2"
            >
              Disorderly Conduct in the Second Degree (DISMISSED) Charged Jan 21, 2019
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="w-100 w-33-l ph3-l mb3"
    >
      <div
        className="mb4"
      >
        <h3
          className="fw7 bt b--light-gray pt2 mb3"
        >
          Balance due by county
           
          <a
            className=" gray link hover-blue underline"
            href="/manual#paybalances"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fas fa-question-circle link hover-dark-blue"
            />
            <span
              className="visually-hidden"
            >
              Learn more about balances
            </span>
          </a>
        </h3>
        <ul
          className="mw5 list"
        >
          <div>
            <h4
              className="fw6 mb2"
            >
              Baker
            </h4>
            <ul
              className="mw5 list mb3"
            >
              <li
                className="mb2"
              >
                <a
                  className="link hover-blue"
                  href="/#100000"
                  onClick={[Function]}
                >
                  100000
                </a>
                 
                <span
                  className="fr"
                >
                  $1,000.00
                </span>
              </li>
            </ul>
          </div>
          <div
            className="mw5 bt b--light-gray pt2"
          >
            <span
              className="fw6"
            >
              Total
            </span>
            <span
              className="fr"
            >
              $1,000.00
            </span>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
